--- a/guestbook-argocd/guestbook-ui-deployment.yaml
+++ b/guestbook-argocd/guestbook-ui-deployment.yaml
@@ -1,20 +1,20 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: guestbook-ui
+  name: guestbook-argocd
 spec:
   replicas: 1
   revisionHistoryLimit: 3
   selector:
     matchLabels:
-      app: guestbook-ui
+      app: guestbook-argocd
   template:
     metadata:
       labels:
-        app: guestbook-ui
+        app: guestbook-argocd
     spec:
       containers:
         - image: gcr.io/google-samples/gb-frontend:v5
-          name: guestbook-ui
+          name: guestbook-argocd
           ports:
             - containerPort: 80
