--- a/guestbook-argocd/new-argocd-svc.yaml
+++ b/guestbook-argocd/new-argocd-svc.yaml
@@ -1,10 +1,10 @@
-#apiVersion: v1
-#kind: Service
-#metadata:
-#  name: new-service-argocd
-#spec:
-#  ports:
-#    - port: 80
-#      targetPort: 80
-#  selector:
-#    app: new-service-argocd
+apiVersion: v1
+kind: Service
+metadata:
+  name: new-service-argocd
+spec:
+  ports:
+    - port: 80
+      targetPort: 80
+  selector:
+    app: new-service-argocd
