--- a/guestbook-argocd/new-argocd-deployment.yaml
+++ b/guestbook-argocd/new-argocd-deployment.yaml
@@ -1,21 +1,21 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: new-deployment-argocd
-spec:
-  replicas: 1
-  revisionHistoryLimit: 3
-  selector:
-    matchLabels:
-      app: new-deployment-argocd
-  template:
-    metadata:
-      labels:
-        app: new-deployment-argocd
-        team: sre
-    spec:
-      containers:
-        - image: gcr.io/google-samples/gb-frontend:v5
-          name: new-deployment-argocd
-          ports:
-            - containerPort: 80
+#apiVersion: apps/v1
+#kind: Deployment
+#metadata:
+#  name: new-deployment-argocd
+#spec:
+#  replicas: 1
+#  revisionHistoryLimit: 3
+#  selector:
+#    matchLabels:
+#      app: new-deployment-argocd
+#  template:
+#    metadata:
+#      labels:
+#        app: new-deployment-argocd
+#        team: sre
+#    spec:
+#      containers:
+#        - image: gcr.io/google-samples/gb-frontend:v5
+#          name: new-deployment-argocd
+#          ports:
+#            - containerPort: 80
