--- a/guestbook-argocd/new-argocd-svc.yaml
+++ b/guestbook-argocd/new-argocd-svc.yaml
@@ -7,5 +7,6 @@ spec:
     - port: 80
       targetPort: 80
   selector:
-    app: new-service-argocd
-    team: sre
+    app: renamed-app
+    team: new-team
+
